--- a/HomeCinema.Data/HomeCinema.Data.csproj
+++ b/HomeCinema.Data/HomeCinema.Data.csproj
@@ -37,6 +37,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MockData">
+      <HintPath>..\packages\MockData.0.0.6\lib\net40\MockData.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -56,6 +59,11 @@
     <Compile Include="HomeCinemaContext.cs" />
     <Compile Include="IDbFactory.cs" />
     <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Migrations\201508292219458_initial_migration.cs" />
+    <Compile Include="Migrations\201508292219458_initial_migration.Designer.cs">
+      <DependentUpon>201508292219458_initial_migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configurations\RentalConfiguration.cs" />
     <Compile Include="Configurations\RoleConfiguration.cs" />
@@ -75,6 +83,15 @@
       <Project>{E65B4247-1680-4622-BEA0-228261BF831B}</Project>
       <Name>HomeCinema.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="it\MockData.resources.dll" />
+    <Content Include="uk\MockData.resources.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201508292219458_initial_migration.resx">
+      <DependentUpon>201508292219458_initial_migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
